--- a/density-mesh-cli/Cargo.toml
+++ b/density-mesh-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "density-mesh-cli"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
 edition = "2018"
 description = "CLI app for density mesh generator"
@@ -15,7 +15,7 @@ name = "density-mesh"
 path = "./src/main.rs"
 
 [dependencies]
-density-mesh-core = { version = "1.0", path = "../density-mesh-core" }
+density-mesh-core = { version = "1.0", path = "../density-mesh-core", features = ["parallel"] }
 density-mesh-image = { version = "1.0", path = "../density-mesh-image" }
 serde_json = "1"
 serde_yaml = "0.8"
