--- a/density-mesh-core/Cargo.toml
+++ b/density-mesh-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "density-mesh-core"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
 edition = "2018"
 description = "Core module for density mesh generator"
@@ -10,6 +10,10 @@ repository = "https://github.com/PsichiX/density-mesh"
 documentation = "https://docs.rs/density-mesh-core"
 readme = "../README.md"
 
+[features]
+parallel = ["rayon"]
+
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 triangulation = "0.1"
+rayon = { version = "1.4", optional = true }
