--- a/density-mesh-image/Cargo.toml
+++ b/density-mesh-image/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "density-mesh-image"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
 edition = "2018"
 description = "Image module for density mesh generator"
@@ -9,6 +9,9 @@ homepage = "https://github.com/PsichiX/density-mesh"
 repository = "https://github.com/PsichiX/density-mesh"
 documentation = "https://docs.rs/density-mesh-image"
 readme = "../README.md"
+
+[features]
+parallel = ["density-mesh-core/parallel"]
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
