--- a/density-mesh-playground/Cargo.toml
+++ b/density-mesh-playground/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "density-mesh-playground"
-version = "0.1.0"
+version = "1.3.0"
 authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 minifb = "0.19"
