--- a/density-mesh-cli/Cargo.toml
+++ b/density-mesh-cli/Cargo.toml
@@ -15,10 +15,12 @@ name = "density-mesh"
 path = "./src/main.rs"
 
 [dependencies]
-density-mesh-core = { version = "1.3", path = "../density-mesh-core", features = ["parallel"] }
+density-mesh-core = { version = "1.3", path = "../density-mesh-core", features = [
+    "parallel",
+] }
 density-mesh-image = { version = "1.3", path = "../density-mesh-image" }
 serde_json = "1"
-serde_yaml = "0.8"
+serde_yaml = "0.9"
 obj-exporter = "0.2"
 clap = "2.34"
-image = { default-features = false, features = ["png"], version = "0.23" }
+image = { default-features = false, features = ["png"], version = "0.24" }
