--- a/density-mesh-cli/Cargo.toml
+++ b/density-mesh-cli/Cargo.toml
@@ -22,5 +22,6 @@ density-mesh-image = { version = "1.3", path = "../density-mesh-image" }
 serde_json = "1"
 serde_yaml = "0.9"
 obj-exporter = "0.2"
-clap = "2.34"
+clap = { version = "4.4", features = ["derive", "unicode", "cargo"] }
 image = { default-features = false, features = ["png"], version = "0.24" }
+strum = { version = "0.25.0", features = ["derive"] }
